# spread_wings_bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  poetry.toml  prod.Dockerfile  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: tasks.md
.github/workflows/: build-and-push-image-to-github-packages-prod.yml  build-and-push-image-to-github-packages.yml  check_django_migrations.yml  check_vulnerabilities.yaml  codestyle_pep8.yml  deploy-bot-on-prod.yml  deploy-bot-on-stage.yml  run_pytest.yml  spread_wings_bot_workflow.yml
ckeditor_add-on/skins/n1theme/: editor.css  editor_ie.css  editor_ie8.css  skin.js
docs/: rasprav_krilya.drawio
docs/er_diagramm/: er_draw
docs/materials/: briff.md  instructions.md
infra/: init.sh
infra/dev/: docker-compose.local.yaml  docker-compose.stage.yaml  nginx.stage.conf  nginx.stage.conf.template  redis.conf  spread_wings_bot.service
infra/prod/: docker-compose.prod.yaml  docker-compose.yaml  nginx.prod.conf.template  redis.conf  spread_wings_bot_prod.service
requirements/: develop.txt  production.txt
src/: .env.example  mailing.py  pyproject.toml  run_bot.py
src/bot/: __init__.py  admin.py  apps.py  bot.py  constants.py  exceptions.py  factories.py  forms.py  models.py  parsing_contacts.py  parsing_data.py  services.py  urls.py  validators.py  views.py
src/bot/constants/: ask_question_states.py  back_functions.py  buttons.py  commands.py  constants.py  contacts.py  list_of_questions.py  messages.py  patterns.py  regions.py  service_const.py  states.py  types_of_assistance.py  urls.py  validate_patterns.py  validation.py
src/bot/core/: config.py  exceptions.py  log_config.py  logging.py  redis.py  redis_persistence.py
src/bot/db/: db.py
src/bot/factories/: contact_data.json  contact_factories.py  example.html  factory_fixtures.py  question_data.json  question_factories.py  question_generate.py  service.py
src/bot/handlers/: ask_question.py  assistance.py  assistance_types.py  back_handler.py  back_question_handler.py  debug_handlers.py  main_handlers.py  service_handlers.py  show_objects.py  show_question.py  tests.py  to_start.py
src/bot/keyboards/: ask_question.py  assistance.py  assistance_types.py  get_back.py  main_keyboards.py
src/bot/migrations/: 0001_initial.py  0002_alter_coordinator_phone_number.py  0002_alter_fundprogram_fund_text.py  0002_alter_question_answer_alter_question_question.py  0003_alter_coordinator_first_name_and_more.py  0003_alter_coordinator_options_coordinator_is_chief.py  (+17 more)
src/bot_settings/: admin.py  apps.py  models.py
src/config/: asgi.py  settings.py  test_settings.py  urls.py
src/core/: admin.py  apps.py  custom_handler.py  factories.py  mailing.py  models.py  utils.py  validators.py
src/db_fixtures/: filldb.py  queries.py
src/logs/: README.md
src/templates/: email.html  password_reset_email.html
src/users/: admin.py  apps.py  forms.py  manager.py  models.py  signals.py  sites.py  urls.py  views.py
src/utils/: mailing.py
tests/: conftest.py  test_bot.py
tests/fixtures/: fixture_data.py
(+70 files in other folders)
