[tool.poetry]
name = "spread-wings-bot"
version = "0.1.0"
description = "add later"
authors = ["add later"]
readme = "README.md"


[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11.1"
python-telegram-bot = "^20.3"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"
python-dotenv = "^1.0.0"
black = "^23.3.0"
pytest = "^7.3.1"
anyio = "^3.7.0"
pytest-tornasync = "^0.6.0.post2"


[tool.pytest.ini_options]
addopts = "-vv -p no:cacheprovider -p no:warnings"
testpaths = [
    "tests",
]
python_files = "test_*.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
